css/styles.css
body {
  font-family: 'Nunito', sans-serif;
}

.background-color-blue {
  background-color: #b5eaea;
}

.background-color-gray {
  background-color: #ececec;
}

.title {
  font-family: 'Pacifico', cursive;
  font-size: 50pt;
  font-weight: 400;
}

.header {
  font-size: 28pt;
}

header {
  background-color: white;
}

.flex {
  display: flex;
}

.justify-center {
  justify-content: center;
}

.width {
  width: 100%;
}

.pink {
  color: #f38ba0;
}

.paws {
  width: 100%;
}

.margin-none {
  margin: 0;
}

.margin-top {
  margin-top: 1rem;
}

.margin-top-none {
  margin-top: 0;
}

.margin-bottom-none {
  margin-bottom: 0;
}

.margin-bottom {
  margin-bottom: 2rem;
}

.button {
  color: white;
  background-color: #f38ba0;
  border: none;
  border-radius: 10px;
}

.big-padding {
  padding: 1rem 2rem;
}

.small-padding {
  padding: 0.3rem 1rem;
}

.tiny-padding {
  padding: 0.5rem 0.5rem 0.2rem 0.5rem;
}

.bottom-padding {
  padding: 0 0 3rem 0;
}

.get-started {
  font-family: 'Nunito', sans-serif;
  font-size: 24pt;
}

.sixteen-font {
  font-size: 16pt;
}

.twenty-font {
  font-size: 20pt;
}

footer {
  background-color: white;
  position: fixed;
  left: 0;
  bottom: 0;
}

.footer-half {
  width: 50%;
}

.dog {
  max-width: 350px;
  max-height: 500px;
  border-radius: 5px;
}

.justify-end {
  justify-content: flex-end;
}

main {
  padding: 1rem 1rem;
}

.caption-font {
  font-size: 16pt;
}

.padding-around {
  padding: 1rem 2rem;
}

.all-column-half {
  width: 50%;
}

.random {
  font-size: 24pt;
}

.text-align-right {
  text-align: right;
}

.modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.671);
}

.underline {
  text-decoration: underline;
}

.bookmark-icon {
  width: 80%;
}

.inline {
  height: 20px;
}

.home-button-header {
  margin-left: 2rem;
}

.textarea {
  resize: none;
  width: 100%;
  border-radius: 5px;
}

.star-icons {
  padding: 0 0.3rem;
}

.star-icon-filled {
  width: 20px;
}

.text-align-left {
  text-align: left;
}

